# cripto_endevs_comunity

./: CHANGELOG.md  Cargo.toml  MIGRATION-0.3.md  README.md  SECURITY.md
examples/: demo.rs
src/: error.rs  lib.rs  packet.rs  persistence.rs  seed.rs
src/modes/: envelope.rs  mod.rs  ordered.rs  replay.rs
test/: adversarial.rs  pr2_packet_aad.rs  pr3_modes_envelope.rs  pr4_replay_window.rs  pr5_persistence.rs
