[package]
name = "cripto_endevs_comunity"
version = "0.2.1"
edition = "2024"
rust-version = "1.95"
authors = ["ENRODMONTPAR"]
description = "Un micro-módulo de cifrado excéntrico y seguro basado en AES-GCM con sistema de Ratcheting."
readme = "README.md"
repository = "https://github.com/MASTER-RODRI/cripto_endevs_comunity"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "aes-gcm", "ratchet", "security"]
categories = ["cryptography"]

[dependencies]
aes-gcm = "0.10.3"
sha2 = "0.10.8"
hkdf = "0.12.4"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }
